dev/deployment_hello.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo2
  namespace: staging
  labels:
    app: demo2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo2
  template:
    metadata:
      labels:
        app: demo2
    spec:
      containers:
      - name: demo2
        image: gcr.io/google-samples/node-hello:1.0
        # image: yeasy/simple-web:latest
        # image: public.ecr.aws/nginx/nginx:perl
        ports:
        - containerPort: 80
        readinessProbe:
          failureThreshold: 5
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 80
        livenessProbe:
          tcpSocket:
            port: 80
          failureThreshold: 5
          successThreshold: 1
          initialDelaySeconds: 10
          periodSeconds: 10
      nodeSelector:
        role: app
