dev/service_hello.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demo2
  namespace: staging
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: demo2
